# uav_pursuit_control

./: .gitignore  CMakeLists.txt  README.md  package.xml
src/: AR_LMPC.cpp  AR_PID.cpp  Pursuit_vicon.cpp  af_pid.cpp  af_speed.cpp  anafi.launch  anafi2.launch  converter.cpp  eulerangles.cpp  eulerangles2.cpp  first_publisher.cpp  mavlink_takeoff.cpp  mavtakeoff.cpp  message.cpp  publisher_quaternion.cpp  quaternion_euler.py  spData.msg  subscriber_quaternion.cpp  traj.msg
src/takeoff_and_land(important)/: CMakeLists.txt  takeoff_and_land.cpp
